--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 17.06.2022 08:44:27</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 17.06.2022 09:11:21</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -133,7 +133,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s citronem a dresinkem z celozrnne horcice, bramborovy salat s cerstvymi okurkami, zelenou cibulkou a majonezou 149</li><li>Peceny filet z cerstveho norskeho lososa s citronem a dresinkem z celozrnne horcice, bramborovy salat s cerstvymi okurkami, zelenou cibulkou a majonezou 175</li><li>Grilovany marocky kureci kebab {volny chov} s okurkovym tzatziki v arabske placce, bulgur, salatek {L} 149</li><li>Prsicka z lesniho holuba na portskem vine, pecene brambory s pecenou zeleninou, salatek 175</li><li>Gigantes plaki – velke maslove fazole v omacce z cerstvych rajcat a bylinek, ovci balkansky syr, arabske placky, salatek  {L} 149</li></ol>
+<ol><li>Bengalske kari s kousky rybich filetu, paprikami, cuketami a panc phoron, jasminova ryze 149</li><li>Peceny filet z cerstveho morskeho vlka a norskeho lososa se salsou z cerstvych rajcat a bylinek, pecene brambory, salatek 175</li><li>Nam prik ong – thajske restovane veprove s chilli, rajcaty, krevetovou pastou a koriandrem, thajska lepkava ryze, salatek 149</li><li>Spagety s nudlickami hoveziho flank steaku, jalapenos, rimskym salatem, petrzelkovym pestem a zralou goudou {L} 175</li><li>Kapustove placicky s petrzelkou a spetkou muskatu, bramborovy salat s cervenou repou, zelenou cibulkou a majonezou {L} 149</li></ol>
 </td>
 </tr>
 </table>
