--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 19.06.2022 14:57:14</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 20.06.2022 07:11:02</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Neděle, 19. 06. 2022</h5>
+<h5>Pondělí, 20. 06. 2022</h5>
 <span class="line"></span>
 <p>
 <strong>Kmínová s vejcem</strong>
@@ -50,9 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Neděle 19.6.2022</div>
+<div class="nadpis">Pondělí 20.6.2022</div>
 <ul>
-<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -63,16 +63,13 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Gulášová</td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Čočková s klobásou</td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">200g Španělský vepřový ptáček, dušená jasmínová rýže</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Maďarský vepřový guláš, naše bramboráčky, cibule, feferonka</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Zapečené fleky s uzeným masem, smetanou a vejci, salát coleslav</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Dušená falešná svíčková na červeném víně s kořenovou zeleninou, bramborová kaše s máslem, vídeňská cibulka</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na roštu s pórkem a červenou cibulí, grilované brambory, tatarka</td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 200g Steak z kuřecích prsou s rajčaty gratinované nivou, hráškové pyré, zeleninový salát, vařené vejce</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené holanské řízky, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na smetanové pepřové omáčce, restované špecle</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny, promíchaný olivovým olejem, plátkovaná vepřová panenka, parmazán</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený sýr a 150g Steak z vepřové pečeně za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Steak z vepřové pečeně se šunkou a sýrem, hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">Staropramen - výčepní 10° 0,5L se slevou 11,-Kč na pivu pro naše stálé sledující po celý den neomezeně</td><td class="menuPrice">27,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">150g Smažená vepřová kotleta bez kosti, bramborová kaše s máslem, citrón</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuřecí kung-pao se zeleninou a arašídy, dušená jasmínová rýže</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na tálu s červenými fazolemi, kukuřicí a pórkem, bramborové krokety, tatarka</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Kapsa z vepřové pečeně na roštu plněná anglickou slaninou, sušenými rajčaty a vařeným vejcem, mačkané brambory s cibulkou</td><td class="menuPrice">154,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Do růžova pečená vepřová panenka, zeleninové lečo s vejci, celerové hranolky, opečená anglická slanina </td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše bramborové noky se sušenými rajčaty s olivami v rajčatové omáčce, medailonky z vepřové panenky, parmazán</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Steak z vepřové pečeně na fazolových luscích, vařené brambory s máslem a šnitlíkem</td><td class="menuPrice">157,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Míchaný zeleninový salát ochucený citrónovým dresinkem, hermelín v těstíčku, brusinkové žervé</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený sýr a 150g Steak z vepřové pečeně za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Steak z vepřové pečeně se šunkou a sýrem, hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Staropramen - výčepní 10° 0,5L se slevou 11,-Kč na pivu pro naše stálé sledující po celý den neomezeně</td><td class="menuPrice">27,-</td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">Naše dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše lívance s redukcí lesního ovoce se zakysanou smetanou</td><td class="menuPrice">65,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Černá Barbora 13° - pivovar Ostravar</td><td class="menuPrice">44,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Šenkýř ALE 11° - pivovar Muflon</td><td class="menuPrice">46,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">COOL grep nealko</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Naše dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše lívance s redukcí lesního ovoce se zakysanou smetanou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tanková 11° - Ležák</td><td class="menuPrice">43,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Staropramen 10° - Výčepní</td><td class="menuPrice">38,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Černá Barbora 13° - pivovar Ostravar</td><td class="menuPrice">44,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Šenkýř ALE 11° - pivovar Muflon</td><td class="menuPrice">46,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">COOL grep nealko</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -80,71 +77,7 @@
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
 <tr>
 <td>
-<table class="dm">
-<tbody>
-<tr>
-<td class="amount">120 g</td>
-<td class="title">Marinovaný losos Gravlax balený ve švédském chlebu s rukolou,
-salátovou okurkou, citrusovým zákysem a koprem 1a,3,4,7</td>
-<td class="pricem">179 Kč</td>
-</tr>
-<tr>
-<td class="amount"></td>
-<td class="title">Krémová pivní cibulačka s uzeným špekem, tymiánem a sýrovým toastem 1a,7</td>
-<td class="pricem">79 Kč</td>
-</tr>
-<tr>
-<td class="amount">400 g</td>
-<td class="title">Teriyaki Udon nudle s hovězím flankem, jarní cibulkou, Pak Choi salátem,
-sójovými klíčky a opraženým sezamem 6,11,12</td>
-<td class="pricem">225 Kč</td>
-</tr>
-<tr>
-<td class="amount">180 g</td>
-<td class="title">Grilované kachní prso na jarním zeleninovém salátu s fenyklem, glazovanými hruškami
-v červeném víně a redukcí z lesních plodů s rozpečenou bylinkovou bagetou 1a,3,7,12	</td>
-<td class="pricem">249 Kč</td>
-</tr>
-<tr>
-<td class="amount"></td>
-<td class="title">Řezy z lotusovým sušenek s mascarpone a pekanovými ořechy 1a,3,7,8e</td>
-<td class="pricem">99 Kč</td>
-</tr>
-</tbody>
-</table>
-</td>
-</tr>
-<tr>
-<td>
-<table class="dm">
-<tbody>
-<tr>
-<td class="title">Gin Tonic Okurkový<br/>
-gin / tonic / čerstvá okurka / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-<tr>
-<td class="title">Gin Tonic PINK<br/>
-malinový gin / tonic  / lesní plody / ovoce / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-<tr>
-<td class="title">Gin Tonic Zázvorový / Ginger<br/>
-gin / zázvorový tonic / citron / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-<tr>
-<td class="title">Gin Tonic Targa Florio<br/>
-gin / citronová limonáda / citron / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-<tr>
-<td class="title">Gin Tonic Pomerančový / Orange<br/>
-pomerančový gin / tonic / pomeranč / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-</tbody>
-</table>
+<table class="dm"><tr><td class="amount">0,33l</td><td class="title">Hráškový krém s pancettou a máslovými krutony 1a,3,7</td><td class="pricem">43 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Záhorácký vepřový závitek plněný kysaným zelím a slaninou s našimi bramborovými knedlíky 1a,3,12</td><td class="pricem">145 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Kuřecí medailonky v sezamovém těstíčku s bramborovou kaší a rajčatovým salátem s majonézou 1a,3,7,10,11</td><td class="pricem">155 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Masové rizoto Jambalaya s klobásou, zeleninou, drcenými rajčaty a koriandrem 9</td><td class="pricem">139 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
